--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,22 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.4"
         classpath 'com.google.gms:google-services:4.3.10'
+        classpath "io.realm:realm-gradle-plugin:10.9.0"
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
+    allprojects {
+        repositories {
+            google()
+            mavenCentral()
+        }
+    }
 }
+
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
